--- a/src/main/resources/templates/newPatient.html
+++ b/src/main/resources/templates/newPatient.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Patient Overview</title>
+    <title>Create new patient</title>
     <link crossorigin="anonymous"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -18,23 +18,20 @@
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<table class="table table-striped table-hover">
-    <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Status</th>
-        <th scope="col">Category</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="pat : ${patients}">
-        <th scope="row" th:text="${pat.patientNumber}"></th>
-        <td th:text="${pat.name}"></td>
-        <td th:text="${pat.status.displayValue}"></td>
-        <td th:text="${pat.category.displayValue}"></td>
-    </tr>
-    </tbody>
-</table>
+
+<h1>Form</h1>
+<form action="#" th:action="@{newPatient}" th:object="${patient}" method="post">
+    <p>Patient number: <input type="text" th:field="*{patientNumber}"></p>
+    <p>Name: <input type="text" th:field="*{name}"></p>
+    <p>Status: <select name="status">
+        <option th:each="statusOpt : ${T(space.ablackack.PatientOverview.enums.StatusEnm).values()}"
+                th:value="${statusOpt}" th:text="${statusOpt.displayValue}"></option>
+    </select></p>
+    <p>Triage: <select name="category">
+        <option th:each="triageOpt : ${T(space.ablackack.PatientOverview.enums.TriageCatEnm).values()}"
+                th:value="${triageOpt}" th:text="${triageOpt.displayValue}"></option>
+    </select></p>
+    <p><input type="submit" value="Submit"/><input type="reset" value="Reset"></p>
+</form>
 </body>
 </html>
