--- a/src/main/resources/templates/newPatient.html
+++ b/src/main/resources/templates/newPatient.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Create new patient</title>
-    <link crossorigin="anonymous"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          rel="stylesheet">
-    <script crossorigin="anonymous"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script crossorigin="anonymous"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script crossorigin="anonymous"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<head th:replace="fragments/header :: default (pageTitle='New Patient')">
 </head>
 <body>
 
@@ -23,10 +8,6 @@
 <form action="#" th:action="@{newPatient}" th:object="${patient}" method="post">
     <p>Patient number: <input type="text" th:field="*{patientNumber}"></p>
     <p>Name: <input type="text" th:field="*{name}"></p>
-    <p>Status: <select name="status">
-        <option th:each="statusOpt : ${T(space.ablackack.PatientOverview.enums.StatusEnm).values()}"
-                th:value="${statusOpt}" th:text="${statusOpt.displayValue}"></option>
-    </select></p>
     <p>Triage: <select name="category">
         <option th:each="triageOpt : ${T(space.ablackack.PatientOverview.enums.TriageCatEnm).values()}"
                 th:value="${triageOpt}" th:text="${triageOpt.displayValue}"></option>
